Prevent toolbar menu drop-downs from being clipped
Fixes regression introduced in fc4f1aae.

--- a/css/app.css
+++ b/css/app.css
@@ -58,6 +58,7 @@
   flex-direction: row;
   flex: 1;
   height: 34px;
+  overflow-y: visible;
   padding: 7px 14px 6px;
   user-select: none;
 }
